--- a/4. Conceitos/1. Sobre os conceitos básicos de uma onda.md
+++ b/4. Conceitos/1. Sobre os conceitos básicos de uma onda.md
@@ -41,3 +41,19 @@ Diz-se como amplitude a distância existente entre a metade da onda, que separa 
 	margin-bottom: 16px;
 	"/>
 </center>
+
+- *Velocidade de propagação*
+Uma onda possui velocidade de propagação própria, que pode ser calculada a partir da seguinte fórmula: 
+![[FORM-3]]
+
+- *Espectro de frequência*
+O espectro de frequência é fundamental para entender o comportamento da luz em diferentes cenários. Dado isso, diferentes frequências podem desempenhar diferentes papéis e o espectro de frequências que será alvo na presente IC varia de $7,5 * 10^{14}Hz$ a $4,3*10^{14}$, ou seja,  uma amplitude de $3,4 * 10^{14}$. 
+<center>
+	<img 
+	src="3. Imagens/3.1. Sobre os conceitos básicos de uma onda/espectro_frequencias.png"
+	style="
+	width: 100%;
+	margin-top: 16px;
+	margin-bottom: 16px;
+	"/>
+</center>
